<resources>
    <string name="app_name">MyApp</string>
    <string name="nameAvatar">Name</string>
    <string name="likes">0</string>
    <string name="mAbout">About</string>
    <string name="mContact">Contact</string>
    <string name="mFavorites">Favorites</string>
    <string name="hintName">Name: </string>
    <string name="hintEmail">Email: </string>
    <string name="hintMessage">Message: </string>
    <string name="hintPass">Password: </string>
    <string name="subject">Comments to app</string>
    <string name="mailDeveloper">marwilcampos@gmail.com</string>
    <string name="Developer">Developer</string>
    <string name="About_me">About me</string>
    <string name="mAccount">Account Setting</string>
    <string name="tvAccount">My App</string>
    <string name="tiWriteUser">Write you user</string>
    <string name="saveAccount">Save Account</string>
    <string name="info">
        Hello my name is Marwil, I am from Venezuela, I am 23 years old and I love to program, I am
        currently studying the fifth semester of computer science at the University of Carabobo.
    </string>
    <string name="notifications_menu">Receive Notifications</string>
    <string name="text_action_go_home">go home</string>
    <string name="text_action_tap_user">follow/unfollow user</string>
    <string name="text_action_view_user">view user</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
