<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/mContact"
        android:title="@string/mContact"
        android:orderInCategory="100"
        >

    </item>

    <item
        android:id="@+id/mAbout"
        android:title="@string/mAbout"
        android:orderInCategory="101"
        >

    </item>

    <item
        android:id="@+id/mFavorites"
        android:title="@string/mFavorites"
        android:orderInCategory="102"
        app:showAsAction="always"
        android:icon="@drawable/ic_star"
        >

    </item>

    <item
        android:id="@+id/mAccount"
        android:title="@string/mAccount"
        android:orderInCategory="103"
        >

    </item>

    <item
    android:id="@+id/mNotifications"
    android:title="@string/notifications_menu"
    android:orderInCategory="104"
    >

</item>

</menu>