<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.marwilc.myapp.view.AccountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/myActionBar2"
            layout="@layout/actionbar">
        </include>

        <TextView
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:padding="8dp"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiWriteUser"
            android:layout_margin="8dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnSaveAccount"
        android:text="@string/saveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@color/colorAccent"
        android:textColor="@color/cardview_light_background"
        />
</FrameLayout>
